# sentinel

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.sh  uninstall.sh
.github/: FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compositor_compat.yml  config.yml
.github/release-notes/: v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.8.0.md  v0.8.1.md  v0.9.0.md
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
_kde/.github/workflows/: release.yml
_kde/docs/src/: building-from-source.md  configuration.md  introduction.md  pam-wiring.md  security.md
config/: polkit-1  sentinel.conf  su
crates/pam-sentinel/: Cargo.toml
crates/pam-sentinel/src/: agent_bypass.rs  broker_client.rs  lib.rs  proc_info.rs  timestamp.rs
crates/sentinel-broker/: Cargo.toml
crates/sentinel-broker/src/: main.rs  server.rs  store.rs
crates/sentinel-helper-kde/: .qmlls.ini  Cargo.toml
docs/: book.toml
docs/src/: architecture.md  building-from-source.md  configuration.md  contributing.md  installation.md  introduction.md  pam-wiring.md  security.md  troubleshooting.md
packaging/: FLATPAK.md
packaging-kde/: install.sh  uninstall.sh
packaging-kde/kde-release-notes/: v0.8.0.md  v0.8.1.md
packaging/arch/: PKGBUILD  README.md  sentinel-cosmic.install
packaging/man/: pam_sentinel.8  sentinel.conf.5
packaging/systemd/: sentinel-broker.service
scripts/: release-local.sh
(+12 files in other folders)
